feat: envio de mensagem funcionando

--- a/.env
+++ b/.env
@@ -3,3 +3,11 @@ COGNITO_USER_POOL_ID=sa-east-1_1a3OPJdNk
 COGNITO_CLIENT_ID=7167tplu3kp623575mfehfl2nt
 COGNITO_REGION=sa-east-1
 API_BASE_URL=https://99wnj26sok.execute-api.sa-east-1.amazonaws.com/prod
+
+# Timeout de conexão (em segundos)
+API_CONNECT_TIMEOUT=10
+# Timeout de resposta (em segundos)
+API_RECEIVE_TIMEOUT=10
+
+# Endpoint WebSocket AWS (exemplo)
+WS_ENDPOINT=wss://98x3s1bqgc.execute-api.sa-east-1.amazonaws.com/production
